--- a/AZURE-environment/newuser.yaml
+++ b/AZURE-environment/newuser.yaml
@@ -1,9 +1,13 @@
-provider "azurerm" {
-  features {}
-  // tenant_id       = "2b32b1fa-7899-482e-a6de-be99c0ff5516"
-  subscription_id = "3a72be92-287b-4f1e-840a-5e3e71100139"
-}
-
-terraform {
-  required_version = ">= 1.5.0"
-}
+---
+- name: Create a new user on Azure VM
+  hosts: azure_vm
+  become: yes
+  vars:
+    new_user: Team-A
+  tasks:
+    - name: Create a user with home directory and bash shell
+      user:
+        name: "{{ new_user }}"
+        shell: /bin/bash
+        state: present
+        create_home: yes
